--- a/test-output/index.html
+++ b/test-output/index.html
@@ -37,8 +37,8 @@
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" panel-name="suite-TC01" class="navigator-link">
-              <span class="suite-name border-passed">TC01</span>
+            <a href="#" panel-name="suite-Sample" class="navigator-link">
+              <span class="suite-name border-passed">Sample</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -48,37 +48,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" panel-name="test-xml-TC01" class="navigator-link ">
-                    <span>C:\Users\ptruong20\Documents\bench_group_java\resources\config\TC01.xml</span>
+                  <a href="#" panel-name="test-xml-Sample" class="navigator-link ">
+                    <span>C:\02 To Learn\java\bench_group_java\src\test\java\com\qmetry\qaf\example\test\Sample.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="testlist-TC01" class="navigator-link ">
+                  <a href="#" panel-name="testlist-Sample" class="navigator-link ">
                     <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="group-TC01" class="navigator-link ">
+                  <a href="#" panel-name="group-Sample" class="navigator-link ">
                     <span>2 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="times-TC01" class="navigator-link ">
+                  <a href="#" panel-name="times-Sample" class="navigator-link ">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="reporter-TC01" class="navigator-link ">
+                  <a href="#" panel-name="reporter-Sample" class="navigator-link ">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="ignored-methods-TC01" class="navigator-link ">
+                  <a href="#" panel-name="ignored-methods-Sample" class="navigator-link ">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="chronological-TC01" class="navigator-link ">
+                  <a href="#" panel-name="chronological-Sample" class="navigator-link ">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -96,16 +96,16 @@
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
                     <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-TC01" class="hide-methods passed suite-TC01"> (hide)</a> <!-- hide-methods passed suite-TC01 -->
-                      <a href="#" panel-name="suite-TC01" class="show-methods passed suite-TC01"> (show)</a> <!-- show-methods passed suite-TC01 -->
+                      <a href="#" panel-name="suite-Sample" class="hide-methods passed suite-Sample"> (hide)</a> <!-- hide-methods passed suite-Sample -->
+                      <a href="#" panel-name="suite-Sample" class="show-methods passed suite-Sample"> (show)</a> <!-- show-methods passed suite-Sample -->
                     </span>
-                    <div class="method-list-content passed suite-TC01">
+                    <div class="method-list-content passed suite-Sample">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-TC01" title="com.qmetry.qaf.automation.step.client.Scenario" class="method navigator-link" hash-for-method="Sample Test">Sample Test</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Sample" title="com.qmetry.qaf.automation.step.client.Scenario" class="method navigator-link" hash-for-method="Sample Test">Sample Test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-TC01 -->
+                    </div> <!-- method-list-content passed suite-Sample -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -116,8 +116,8 @@
     </div> <!-- navigator-root -->
     <div class="wrapper">
       <div class="main-panel-root">
-        <div panel-name="suite-TC01" class="panel TC01">
-          <div class="suite-TC01-class-passed">
+        <div panel-name="suite-Sample" class="panel Sample">
+          <div class="suite-Sample-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
               <span class="class-name">com.qmetry.qaf.automation.step.client.Scenario</span>
@@ -131,18 +131,18 @@
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-TC01-class-passed -->
-        </div> <!-- panel TC01 -->
-        <div panel-name="test-xml-TC01" class="panel">
+          </div> <!-- suite-Sample-class-passed -->
+        </div> <!-- panel Sample -->
+        <div panel-name="test-xml-Sample" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ptruong20\Documents\bench_group_java\resources\config\TC01.xml</span>
+            <span class="header-content">C:\02 To Learn\java\bench_group_java\src\test\java\com\qmetry\qaf\example\test\Sample.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;TC01&quot; guice-stage=&quot;DEVELOPMENT&quot; verbose=&quot;0&quot;&gt;
-  &lt;test name=&quot;TC01&quot;&gt;
+&lt;suite name=&quot;Sample&quot; guice-stage=&quot;DEVELOPMENT&quot; verbose=&quot;0&quot;&gt;
+  &lt;test name=&quot;Test&quot;&gt;
     &lt;method-selectors&gt;
       &lt;method-selector&gt;
         &lt;selector-class name=&quot;com.qmetry.qaf.automation.testng.pro.QAFMethodSelector&quot; priority=&quot;0&quot;/&gt;
@@ -156,26 +156,26 @@
     &lt;classes&gt;
       &lt;class name=&quot;com.qmetry.qaf.automation.step.client.gherkin.GherkinScenarioFactory&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- TC01 --&gt;
-&lt;/suite&gt; &lt;!-- TC01 --&gt;
+  &lt;/test&gt; &lt;!-- Test --&gt;
+&lt;/suite&gt; &lt;!-- Sample --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="testlist-TC01" class="panel">
+        <div panel-name="testlist-Sample" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Tests for TC01</span>
+            <span class="header-content">Tests for Sample</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">TC01 (1 class)</span>
+                <span class="test-name">Test (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="group-TC01" class="panel">
+        <div panel-name="group-Sample" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Groups for TC01</span>
+            <span class="header-content">Groups for Sample</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="test-group">
@@ -196,15 +196,15 @@
             </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="times-TC01" class="panel">
+        <div panel-name="times-Sample" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Times for TC01</span>
+            <span class="header-content">Times for Sample</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="times-div">
               <script type="text/javascript">
-suiteTableInitFunctions.push('tableData_TC01');
-function tableData_TC01() {
+suiteTableInitFunctions.push('tableData_Sample');
+function tableData_Sample() {
 var data = new google.visualization.DataTable();
 data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
@@ -214,32 +214,32 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'Sample Test')
 data.setCell(0, 2, 'com.qmetry.qaf.automation.step.client.Scenario')
-data.setCell(0, 3, 28313);
-window.suiteTableData['TC01']= { tableData: data, tableDiv: 'times-div-TC01'}
+data.setCell(0, 3, 30127);
+window.suiteTableData['Sample']= { tableData: data, tableDiv: 'times-div-Sample'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 28 seconds</span>
-              <div id="times-div-TC01">
-              </div> <!-- times-div-TC01 -->
+              <span class="suite-total-time">Total running time: 30 seconds</span>
+              <div id="times-div-Sample">
+              </div> <!-- times-div-Sample -->
             </div> <!-- times-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="reporter-TC01" class="panel">
+        <div panel-name="reporter-Sample" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Reporter output for TC01</span>
+            <span class="header-content">Reporter output for Sample</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="ignored-methods-TC01" class="panel">
+        <div panel-name="ignored-methods-Sample" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="chronological-TC01" class="panel">
+        <div panel-name="chronological-Sample" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
@@ -247,40 +247,40 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.qmetry.qaf.automation.step.client.Scenario</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
-                <span class="method-name">setupSuit(org.testng.TestRunner@29ca3d04)</span>
+                <span class="method-name">setupSuit(org.testng.TestRunner@7098b907)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-test before">
-                <span class="method-name">setupTest(org.testng.TestRunner@29ca3d04)</span>
-                <span class="method-start">40 ms</span>
+                <span class="method-name">setupTest(org.testng.TestRunner@7098b907)</span>
+                <span class="method-start">85 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-class before">
-                <span class="method-name">setup(org.testng.TestRunner@29ca3d04)</span>
-                <span class="method-start">48 ms</span>
+                <span class="method-name">setup(org.testng.TestRunner@7098b907)</span>
+                <span class="method-start">98 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
-                <span class="method-name">setupMethod(public void com.qmetry.qaf.automation.step.client.Scenario.scenario(), org.testng.TestRunner@29ca3d0...)</span>
-                <span class="method-start">57 ms</span>
+                <span class="method-name">setupMethod(public void com.qmetry.qaf.automation.step.client.Scenario.scenario(), org.testng.TestRunner@7098b90...)</span>
+                <span class="method-start">111 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">Sample Test</span>
-                <span class="method-start">59 ms</span>
+                <span class="method-start">113 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">afterMethod(org.testng.TestRunner@29ca3d04, [TestResult name=Sample Test status=SUCCESS method=scenarios.TC01.fe...)</span>
-                <span class="method-start">28413 ms</span>
+                <span class="method-name">afterMethod(org.testng.TestRunner@7098b907, [TestResult name=Sample Test status=SUCCESS method=scenarios.TC01.fe...)</span>
+                <span class="method-start">30313 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
-                <span class="method-name">afterClass(org.testng.TestRunner@29ca3d04)</span>
-                <span class="method-start">28414 ms</span>
+                <span class="method-name">afterClass(org.testng.TestRunner@7098b907)</span>
+                <span class="method-start">30316 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-test after">
-                <span class="method-name">afterTest(org.testng.TestRunner@29ca3d04)</span>
-                <span class="method-start">28417 ms</span>
+                <span class="method-name">afterTest(org.testng.TestRunner@7098b907)</span>
+                <span class="method-start">30319 ms</span>
               </div> <!-- configuration-test after -->
               <div class="configuration-suite after">
-                <span class="method-name">afterSuit(org.testng.TestRunner@29ca3d04)</span>
-                <span class="method-start">28692 ms</span>
+                <span class="method-name">afterSuit(org.testng.TestRunner@7098b907)</span>
+                <span class="method-start">30652 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
