--- a/test-output/old/Sample/groups.html
+++ b/test-output/old/Sample/groups.html
@@ -1,3 +1,4 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>@Sample</td><td>scenarios.Sample.feature.Sample Test()[pri:1000, instance:com.qmetry.qaf.automation.step.client.Scenario@3e8]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>@TC01</td><td>scenarios.TC01.feature.Sample Test()[pri:1000, instance:com.qmetry.qaf.automation.step.client.Scenario@3e8]<br/></td></tr>
+<tr><td>@TC01.01</td><td>scenarios.TC01.feature.Sample Test()[pri:1000, instance:com.qmetry.qaf.automation.step.client.Scenario@3e8]<br/></td></tr>
 </table>
