--- a/test-output/old/Sample/methods-alphabetical.html
+++ b/test-output/old/Sample/methods-alphabetical.html
@@ -1,22 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Sample</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a68a88">  <td>20/11/26 17:31:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="scenarios.Sample.feature.Sample Test()[pri:1000, instance:com.qmetry.qaf.automation.step.client.Scenario@3e8]">Sample Test</td> 
-  <td>main@1391624125</td>   <td>1000 </td> </tr>
-<tr bgcolor="7a6466">  <td>20/11/26 17:32:10</td>   <td>12414</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestCase.afterClass(org.testng.ITestContext)[pri:0, instance:com.qmetry.qaf.automation.step.client.Scenario@3e8]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1391624125</td>   <td>1000 </td> </tr>
-<tr bgcolor="7a6466">  <td>20/11/26 17:32:10</td>   <td>12412</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestCase.afterMethod(org.testng.ITestContext, org.testng.ITestResult)[pri:0, instance:com.qmetry.qaf.automation.step.client.Scenario@3e8]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1391624125</td>   <td>1000 </td> </tr>
-<tr bgcolor="c36a80">  <td>20/11/26 17:32:11</td>   <td>12947</td> <td title="&lt;&lt;TestNGTestCase.afterSuit(org.testng.ITestContext)[pri:0, instance:com.qmetry.qaf.automation.step.client.Scenario@3e8]">&lt;&lt;afterSuit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1391624125</td>   <td>1000 </td> </tr>
-<tr bgcolor="7a6466">  <td>20/11/26 17:32:10</td>   <td>12419</td> <td>&nbsp;</td><td title="&lt;&lt;AbstractTestCase.afterTest(org.testng.ITestContext)[pri:0, instance:com.qmetry.qaf.automation.step.client.Scenario@3e8]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1391624125</td>   <td>1000 </td> </tr>
-<tr bgcolor="c36a80">  <td>20/11/26 17:31:58</td>   <td>-19</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNGTestCase.setup(org.testng.ITestContext)[pri:0, instance:com.qmetry.qaf.automation.step.client.Scenario@3e8]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1391624125</td>   <td>1000 </td> </tr>
-<tr bgcolor="c36a80">  <td>20/11/26 17:31:58</td>   <td>-3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNGTestCase.setupMethod(java.lang.reflect.Method, org.testng.ITestContext)[pri:0, instance:com.qmetry.qaf.automation.step.client.Scenario@3e8]">&gt;&gt;setupMethod</td> 
-<td>&nbsp;</td>  <td>main@1391624125</td>   <td>1000 </td> </tr>
-<tr bgcolor="c36a80">  <td>20/11/26 17:31:57</td>   <td>-99</td> <td title="&gt;&gt;TestNGTestCase.setupSuit(org.testng.ITestContext)[pri:0, instance:com.qmetry.qaf.automation.step.client.Scenario@3e8]">&gt;&gt;setupSuit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1391624125</td>   <td>1000 </td> </tr>
-<tr bgcolor="c36a80">  <td>20/11/26 17:31:58</td>   <td>-32</td> <td>&nbsp;</td><td title="&gt;&gt;TestNGTestCase.setupTest(org.testng.ITestContext)[pri:0, instance:com.qmetry.qaf.automation.step.client.Scenario@3e8]">&gt;&gt;setupTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1391624125</td>   <td>1000 </td> </tr>
+<tr bgcolor="9f98c4">  <td>20/11/27 21:01:44</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="scenarios.TC01.feature.Sample Test()[pri:1000, instance:com.qmetry.qaf.automation.step.client.Scenario@3e8]">Sample Test</td> 
+  <td>main@629454893</td>   <td>1000 </td> </tr>
+<tr bgcolor="b1e9b8">  <td>20/11/27 21:02:14</td>   <td>30203</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestCase.afterClass(org.testng.ITestContext)[pri:0, instance:com.qmetry.qaf.automation.step.client.Scenario@3e8]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@629454893</td>   <td>1000 </td> </tr>
+<tr bgcolor="b1e9b8">  <td>20/11/27 21:02:14</td>   <td>30200</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestCase.afterMethod(org.testng.ITestContext, org.testng.ITestResult)[pri:0, instance:com.qmetry.qaf.automation.step.client.Scenario@3e8]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@629454893</td>   <td>1000 </td> </tr>
+<tr bgcolor="f68e93">  <td>20/11/27 21:02:14</td>   <td>30539</td> <td title="&lt;&lt;TestNGTestCase.afterSuit(org.testng.ITestContext)[pri:0, instance:com.qmetry.qaf.automation.step.client.Scenario@3e8]">&lt;&lt;afterSuit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@629454893</td>   <td>1000 </td> </tr>
+<tr bgcolor="b1e9b8">  <td>20/11/27 21:02:14</td>   <td>30206</td> <td>&nbsp;</td><td title="&lt;&lt;AbstractTestCase.afterTest(org.testng.ITestContext)[pri:0, instance:com.qmetry.qaf.automation.step.client.Scenario@3e8]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@629454893</td>   <td>1000 </td> </tr>
+<tr bgcolor="f68e93">  <td>20/11/27 21:01:44</td>   <td>-15</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNGTestCase.setup(org.testng.ITestContext)[pri:0, instance:com.qmetry.qaf.automation.step.client.Scenario@3e8]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@629454893</td>   <td>1000 </td> </tr>
+<tr bgcolor="f68e93">  <td>20/11/27 21:01:44</td>   <td>-2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestNGTestCase.setupMethod(java.lang.reflect.Method, org.testng.ITestContext)[pri:0, instance:com.qmetry.qaf.automation.step.client.Scenario@3e8]">&gt;&gt;setupMethod</td> 
+<td>&nbsp;</td>  <td>main@629454893</td>   <td>1000 </td> </tr>
+<tr bgcolor="f68e93">  <td>20/11/27 21:01:44</td>   <td>-110</td> <td title="&gt;&gt;TestNGTestCase.setupSuit(org.testng.ITestContext)[pri:0, instance:com.qmetry.qaf.automation.step.client.Scenario@3e8]">&gt;&gt;setupSuit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@629454893</td>   <td>1000 </td> </tr>
+<tr bgcolor="f68e93">  <td>20/11/27 21:01:44</td>   <td>-28</td> <td>&nbsp;</td><td title="&gt;&gt;TestNGTestCase.setupTest(org.testng.ITestContext)[pri:0, instance:com.qmetry.qaf.automation.step.client.Scenario@3e8]">&gt;&gt;setupTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@629454893</td>   <td>1000 </td> </tr>
 </table>
